--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,4 @@
-
-    <nav class="navbar navbar-expand-lg navbar-light navbar-stick-dark" data-navbar="sticky">
+<nav class="navbar navbar-expand-lg navbar-light navbar-stick-dark" data-navbar="sticky">
       <div class="container">
 
         <div>
@@ -15,58 +14,59 @@
 
           <ul class="nav nav-navbar">
             <li class="nav-item">
-              <a class="nav-link" href="#">Anasayfa </a>
+              <a class="nav-link" href="#">Home</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Web Uygulama <span class="arrow"></span></a>
+              <a class="nav-link" href="#">Web Application <span class="arrow"></span></a>
               <nav class="nav">
-                <a class="nav-link" href="#">Dinamik Web Sayfası</a>
-                <a class="nav-link" href="#">Admin Paneli</a>
-                <a class="nav-link" href="#">Müşteri Takibi</a>
-                <a class="nav-link" href="#">Sosyal Medya Takibi</a>
+                <a class="nav-link" href="#">Dynamic Web Page</a>
+                <a class="nav-link" href="#">Admin Panel</a>
+                <a class="nav-link" href="#">Customer Tracking</a>
+                <a class="nav-link" href="#">Social Media Tracking</a>
                 <div class="nav-divider"></div>
-                <a class="nav-link" href="#">WordPress Kurulumu</a>
+                <a class="nav-link" href="#">WordPress Installation</a>
                 <div class="nav-divider"></div>
-                <a class="nav-link" href="#">e-Ticaret Paketi</a>
+                <a class="nav-link" href="#">E-commerce Package</a>
                 <div class="nav-divider"></div>
-                <a class="nav-link" href="http://akademitakibi.com" target="_blank">Goweb Akademi</a>
-                <a class="nav-link" href="http://estetikprogram.com" target="_blank">Goweb Klinik</a>
+                <a class="nav-link" href="http://akademitakibi.com" target="_blank">Goweb Academy</a>
+                <a class="nav-link" href="http://estetikprogram.com" target="_blank">Goweb Clinic</a>
               </nav>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Mobil Uygulama </a></li>
+              <a class="nav-link" href="#">Mobile Application</a>
+            </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Dijital Pazarlama <span class="arrow"></span></a>
+              <a class="nav-link" href="#">Digital Marketing <span class="arrow"></span></a>
               <nav class="nav">
                 <a class="nav-link" href="#">SEO</a>
                 <a class="nav-link" href="#">AdSense</a>
-                <a class="nav-link" href="#">Bussness Manager</a>
+                <a class="nav-link" href="#">Business Manager</a>
               </nav>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Tanıtımlar <span class="arrow"></span></a>
+              <a class="nav-link" href="#">Promotions <span class="arrow"></span></a>
               <nav class="nav">
-                <a class="nav-link" href="#">Grafik Tasarım</a>
-                <a class="nav-link" href="#">Broşür &amp; İlan</a>
-                <a class="nav-link" href="#">Kartvizit &amp; Logo</a>
-                <a class="nav-link" href="#">Kurumsal Kimlik Elemanları</a>
+                <a class="nav-link" href="#">Graphic Design</a>
+                <a class="nav-link" href="#">Brochure &amp; Advertisement</a>
+                <a class="nav-link" href="#">Business Card &amp; Logo</a>
+                <a class="nav-link" href="#">Corporate Identity Elements</a>
                 <div class="nav-divider"></div>
-                <a class="nav-link" href="#">Tanıtım Videoları</a>
-                <a class="nav-link" href="#">İşlem Videoları</a>
-                <a class="nav-link" href="#">Reklam Videoları</a>
-                <a class="nav-link" href="#">Story &amp; Post Videoları</a>
+                <a class="nav-link" href="#">Promotional Videos</a>
+                <a class="nav-link" href="#">Procedure Videos</a>
+                <a class="nav-link" href="#">Commercial Videos</a>
+                <a class="nav-link" href="#">Story &amp; Post Videos</a>
 
                 <div class="nav-divider"></div>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Çeviri <span class="arrow"></span></a>
+                  <a class="nav-link" href="#">Translation <span class="arrow"></span></a>
                   <nav class="nav">
-                    <a class="nav-link" href="#">Arapça</a>
-                    <a class="nav-link" href="#">İngilizce</a>
-                    <a class="nav-link" href="#">Fransızca</a>
+                    <a class="nav-link" href="#">Arabic</a>
+                    <a class="nav-link" href="#">English</a>
+                    <a class="nav-link" href="#">French</a>
                   </nav>
                 </li>
               </nav>
@@ -77,13 +77,13 @@
               <nav class="nav">
                 <a class="nav-link" href="#">EN</a>
                 <a class="nav-link" href="#">AR</a>
-                <a class="nav-link" href="#">Fr</a>
+                <a class="nav-link" href="#">FR</a>
               </nav>
             </li>
           </ul>
         </section>
 
-        <!-- <a class="btn btn-label btn-round btn-light" href="tel:+905454611289"><label><i class="fa fa-phone"></i></label>Hemen Ara</a> -->
+        <!-- <a class="btn btn-label btn-round btn-light" href="tel:+905454611289"><label><i class="fa fa-phone"></i></label>Call Now</a> -->
 
       </div>
     </nav>
