--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
-    <footer class="footer bg-gray">
+<footer class="footer bg-gray">
       <div class="container">
         <div class="row gap-y">
 
           <div class="col-md-6 col-xl-4">
             <p><a href="index.php"><img src="assets/img/logo-dark.png" alt="LUMINERDS — MULTISERVICES"></a></p>
             <p>
-                Luminerds, sunmuş olduğu entegre hizmetler ile marka değerinizi arttırmayı ve sizlere yeni müşteriler kazandırmayı hedefliyor!
+                Luminerds aims to increase your brand value and help you gain new customers through its integrated services!
             </p>
             <p>
                 <strong><a href="tel:+905454611289">+90 545 461 1289</a></strong>&nbsp; - &nbsp;
@@ -14,46 +14,46 @@
           </div>
 
           <div class="col-6 col-md-3 col-xl-2">
-            <h6 class="mb-4 mt-1"><strong>Kullanıcılar</strong></h6>
+            <h6 class="mb-4 mt-1"><strong>Users</strong></h6>
             <div class="nav flex-column">
-              <a class="nav-link" href="#">Kullanıcı Sözleşmesi</a>
-              <a class="nav-link" href="#">Gizlilik Politikası</a>
-              <a class="nav-link" href="#">Çerez Politikası</a>
-              <a class="nav-link" href="#">Kişisel Verilerin Korunması</a>
-              <a class="nav-link" href="#">Sıkça Sorulan Sorular</a>
+              <a class="nav-link" href="#">User Agreement</a>
+              <a class="nav-link" href="#">Privacy Policy</a>
+              <a class="nav-link" href="#">Cookie Policy</a>
+              <a class="nav-link" href="#">Personal Data Protection</a>
+              <a class="nav-link" href="#">FAQ</a>
             </div>
           </div>
 
           <div class="col-6 col-md-3 col-xl-2">
             <h6 class="mb-4 mt-1"><strong>Luminerds</strong></h6>
             <div class="nav flex-column">
-              <a class="nav-link" href="#">Müşteriler</a>
-              <a class="nav-link" href="#">İletişim</a>
-              <a class="nav-link" href="#">Destek</a>
-              <a class="nav-link" href="#">Hakkımızda</a>
-              <a class="nav-link" href="#">İş Fırsatları</a>
-              <a class="nav-link" href="#">Entegrasyonlar</a>
+              <a class="nav-link" href="#">Clients</a>
+              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Support</a>
+              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#">Careers</a>
+              <a class="nav-link" href="#">Integrations</a>
             </div>
           </div>
 
           <div class="col-6 col-md-6 col-xl-2">
-            <h6 class="mb-4 mt-1"><strong>Hizmetler</strong></h6>
+            <h6 class="mb-4 mt-1"><strong>Services</strong></h6>
             <div class="nav flex-column">
-              <a class="nav-link" href="#">Web Tasarım</a>
-              <a class="nav-link" href="#">Uygulamalar</a>
-              <a class="nav-link" href="#">Entegrasyonlar</a>
-              <a class="nav-link" href="#">Dijital Pazarlama</a>
-              <a class="nav-link" href="#">Sosyal Medya Yönetimi</a>
-              <a class="nav-link" href="#">Tanıtımlar</a>
+              <a class="nav-link" href="#">Web Design</a>
+              <a class="nav-link" href="#">Applications</a>
+              <a class="nav-link" href="#">Integrations</a>
+              <a class="nav-link" href="#">Digital Marketing</a>
+              <a class="nav-link" href="#">Social Media Management</a>
+              <a class="nav-link" href="#">Promotions</a>
             </div>
           </div>
 
           <div class="col-6 col-md-6 col-xl-2">
-            <h6 class="mb-4 mt-1"><strong>Takip Edin</strong></h6>
+            <h6 class="mb-4 mt-1"><strong>Follow Us</strong></h6>
             <div class="nav flex-column">
               <a class="nav-link" href="#">Facebook</a>
               <a class="nav-link" href="#">Instagram</a>
-              <a class="nav-link" href="#">Youtube</a>
+              <a class="nav-link" href="#">YouTube</a>
               <a class="nav-link" href="#">Twitter</a>
               <a class="nav-link" href="#">Google+</a>
               <a class="nav-link" href="#">Blog</a>
@@ -65,12 +65,12 @@
             </div>
 
             <div class="col-md-4 text-center text-md-left">
-              <small><?php echo "2011 - ".date("Y"); ?> &copy; Luminerds. All Right Reserved. </small>
+              <small><?php echo "2011 - ".date("Y"); ?> &copy; Luminerds. All Right Reserved.</small>
             </div>
 
             <div class="col-md-8 text-center text-md-right">
-            <p>Büyükdere Caddesi, Atakan Sokak, No:14 Mecidiyeköy / Şişli-İstanbul</p>
+              <p>Büyükdere Street, Atakan Alley, No:14 Mecidiyeköy / Şişli-Istanbul</p>
             </div>
         </div>
       </div>
-    </footer>
+</footer>
