--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -72,14 +72,14 @@
               </nav>
             </li>
 
-            <li class="nav-item">
+<!--             <li class="nav-item">
               <a class="nav-link" href="#">TR <span class="arrow"></span></a>
-<!--               <nav class="nav">
+              <nav class="nav">
                 <a class="nav-link" href="#">EN</a>
                 <a class="nav-link" href="#">AR</a>
                 <a class="nav-link" href="#">FR</a>
-              </nav> -->
-            </li>
+              </nav>
+            </li> -->
           </ul>
         </section>
 
